--- a/index.html
+++ b/index.html
@@ -1963,7 +1963,7 @@
 <span class="empty" title="4点经验 10秒"></span>
 </span></td></tr>
 
-<tr><th><strong id="splint">碎钻 (Splint)</strong></th>
+<tr><th><strong id="splint">碎钻 (Splint)</strong><br />矿物辞典 dict:"diamond_nugget"</th>
 <td>钻石剑<br/>任何钻石工具<br/>任何钻石盔甲<br/>钻石马铠</td>
 <td><span class="ui fur" title="熔炉或高炉">
 <span class="diamond_sword" title="钻石剑"></span>
@@ -2345,7 +2345,7 @@
 <h2 id="dusts">粉末</h2>
 
 <table><thead><tr><th>产物</th><th colspan="2">配方</th></tr></thead><tbody>
-<tr><th rowspan="3"><strong id="iron_dust">铁粉 (Iron Dust)</strong></th><td>铁锭+燧石<td>
+<tr><th rowspan="3"><strong id="iron_dust">铁粉 (Iron Dust)</strong><br />矿物辞典 dict:"iron_dust"</th><td>铁锭+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="iron_ingot" title="铁锭"></span>
 <span class="flint" title="燧石"></span>
@@ -2370,7 +2370,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th rowspan="3"><strong id="gold_dust">金粉 (Gold Dust)</strong></th><td>金锭+燧石<td>
+<tr><th rowspan="3"><strong id="gold_dust">金粉 (Gold Dust)</strong><br />矿物辞典 dict:"gold_dust"</th><td>金锭+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="gold_ingot" title="金锭"></span>
 <span class="flint" title="燧石"></span>
@@ -2395,7 +2395,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th rowspan="3"><strong id="carbon_dust">碳粉 (Carbon Dust)</strong></th><td>煤炭/木炭/<a href="#cinder">煤渣</a>+燧石<td>
+<tr><th rowspan="3"><strong id="carbon_dust">碳粉 (Carbon Dust)</strong><br />矿物辞典 dict:"carbon_dust"</th><td>煤炭/木炭/<a href="#cinder">煤渣</a>+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="coal" title="煤炭"></span>
 <span class="flint" title="燧石"></span>
@@ -2420,7 +2420,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th rowspan="2"><strong id="emerald_dust">绿宝石粉 (Emerald Dust)</strong></th><td>绿宝石+燧石<td>
+<tr><th rowspan="2"><strong id="emerald_dust">绿宝石粉 (Emerald Dust)</strong><br />矿物辞典 dict:"emerald_dust"</th><td>绿宝石+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="emerald" title="绿宝石"></span>
 <span class="flint" title="燧石"></span>
@@ -2437,7 +2437,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th rowspan="4"><strong id="diamond_dust">钻石粉 (Diamond Dust)</strong></th><td>钻石+燧石<td>
+<tr><th rowspan="4"><strong id="diamond_dust">钻石粉 (Diamond Dust)</strong><br />矿物辞典 dict:"diamond_dust"</th><td>钻石+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="diamond" title="钻石"></span>
 <span class="flint" title="燧石"></span>
@@ -2470,7 +2470,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th rowspan="2"><strong id="quartz_dust">石英粉 (Quartz Dust)</strong></th><td>石英/花岗岩/安山岩/闪长岩+燧石<td>
+<tr><th rowspan="2"><strong id="quartz_dust">石英粉 (Quartz Dust)</strong><br />矿物辞典 dict:"quartz_dust"</th><td>石英/花岗岩/安山岩/闪长岩+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
 <span class="quartz" title="石英"></span>
 <span class="flint" title="燧石"></span>
@@ -2532,7 +2532,7 @@
 <span class="empty" title="4点经验 10秒"></span></span>
 </td></tr>
 
-<tr><th><strong id="steel_dust">钢粉 (Steel Dust)</strong></th><td><a href="#carbon_dust">碳粉</a>+<a href="#iron_dust">铁粉</a></td>
+<tr><th><strong id="steel_dust">钢粉 (Steel Dust)</strong><br />矿物辞典 dict:"steel_dust"</th><td><a href="#carbon_dust">碳粉</a>+<a href="#iron_dust">铁粉</a></td>
 <td><span class="ui cm" title="合成器">
 <span class="empty"></span>
 <span class="ci carbon_dust" title="碳粉"></span>
@@ -2568,7 +2568,7 @@
 <h2 id="bottles">瓶装物品</h2>
 
 <table><thead><tr><th>产物</th><th colspan="2">配方</th></tr></thead><tbody>
-<tr><th><strong id="bottle_of_salt">盐瓶 (Bottle of Salt)</strong></th><td>玻璃瓶+沙子/<a href="#red_sand">红沙</a><td>
+<tr><th><strong id="bottle_of_salt">盐瓶 (Bottle of Salt)</strong><br />矿物辞典 dict:"salt"</th><td>玻璃瓶+沙子/<a href="#red_sand">红沙</a><td>
 <span class="ui aiom nh4" title="多功能一体机 高温常压模式">
 <span class="glass_bottle" title="玻璃瓶"></span>
 <span class="sand" title="沙子"></span>
