--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.8.zip">官方</a></td>
 </tr>
 <tr>
+	<td>Java版 1.14.x</td>
+	<td>v1.9.4</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.4">github</a>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.4.zip">官方</a></td>
+</tr>
+<tr>
 	<td>Java版 1.13.1-1.13.2</td>
 	<td>v1.8.4</td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.8.4">github</a>
@@ -84,7 +90,7 @@
 <li><span style="font-weight:bold;">数据包</span>文件夹位于<code>.minecraft/saves/世界名称/datapacks</code>文件夹，该文件夹也可从游戏界面<code>选中世界->编辑->打开世界文件夹->打开datapacks文件夹</code>处打开。将文件夹<code>craftingpp</code>(普通生存模式)或文件夹<code>craftingpp_skyisland</code>(空岛生存模式)放入，然后退出世界重进。请勿将两个数据包同时放置在该文件夹内！</li>
 </ul>
 <p>最后请打开<code>选项->语言->强制使用Unicode字体：关</code>。
-<p>如果是v1.9.8之前的版本，直接下载后解压缩文件至<code>.minecraft/saves/世界名称</code>文件夹即可，模组会自动识别决定是否开启空岛模式(y=0不为基岩)。</p>
+<p>如果是v1.9.4及之前的版本，直接下载后解压缩文件至<code>.minecraft/saves/世界名称</code>文件夹即可，模组会自动识别决定是否开启空岛模式(y=0不为基岩)。</p>
 <!--<p>广告：欢迎加入挼苹果服，QQ群号885244850。</p>-->
 
 <h4>模组入门</h4>
