--- a/index.html
+++ b/index.html
@@ -61,22 +61,67 @@
 	<li><a href="https://github.com/ruhuasiyu/CraftingPlusPlus">github 页面</a></li>
 </ul>
 
-<table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th>下载地址</th><th>备用下载地址</th></tr></thead>
+<table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th colspan="2">下载地址</th></tr></thead>
 <tbody>
 <tr>
 	<td>Java版 1.14.x</td>
 	<td>v1.9.9</td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.9">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.9/craftingpp.zip">数据包(普通生存模式)</a> |
-	<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.9/craftingpp_skyisland.zip">数据包(空岛生存模式)</a> |
-	<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.9/craftingpp_resources.zip">资源包</a>
-	</td>
+	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.9.zip">官方</a></td>
+</tr>
+<tr>
+	<td>Java版 1.14.x</td>
+	<td>v1.9.8</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.8">github</a></td>
+	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.8.zip">官方</a></td>
+</tr>
+<tr>
+	<td>Java版 1.14.x</td>
+	<td>v1.9.7</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.7">github</a></td>
+	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.7.zip">官方</a></td>
+</tr>
+<tr>
+	<td>Java版 1.14.x</td>
+	<td>v1.9.6</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.6">github</a></td>
+	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.6.zip">官方</a></td>
+</tr>
+<tr>
+	<td>Java版 1.14.x</td>
+	<td>v1.9.5</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.5">github</a></td>
+	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.5.zip">官方</a></td>
 </tr>
 <tr>
 	<td>Java版 1.14.x</td>
 	<td>v1.9.4</td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.4">github</a></td>
 	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.4.zip">官方</a></td>
+</tr>
+<tr>
+	<td>Java版 1.14.x</td>
+	<td>v1.9.3</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.3">github</a></td>
+	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.3.zip">官方</a></td>
+</tr>
+<tr>
+	<td>Java版 1.14.x</td>
+	<td>v1.9.2</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.2">github</a></td>
+	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.2.zip">官方</a></td>
+</tr>
+<tr>
+	<td>Java版 1.14.x</td>
+	<td>v1.9.1</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.1">github</a></td>
+	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.1.zip">官方</a></td>
+</tr>
+<tr>
+	<td>Java版 1.14.x</td>
+	<td>v1.9</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9">github</a></td>
+	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.zip">官方</a></td>
 </tr>
 <tr>
 	<td>Java版 1.13.1-1.13.2</td>
@@ -5480,7 +5525,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-07-17</p>
+<p>最后更新 2019-07-22</p>
 </footer>
 </article>
 </body></html>
