--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p>本模组即将完结，以后应该只会修复bug和优化内容，不会再有大的更新。如遇到Minecraft命令机制大改或新生物等内容，我还是会及时更新代码并支持新的内容。感谢大家一直以来的支持和帮助！</p>
 
 <h3 id="download">📦 下载地址</h3>
-<p>本页面所列内容为1.9.10版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。更多版本请<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tags">点击此处查看</a>。</p>
+<p>本页面所列内容为1.9版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。更多版本请<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tags">点击此处查看</a>。</p>
 <ul>
 	<li><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp">官方主页</a></li>
 	<li><a href="http://www.mcbbs.net/thread-696861-1-1.html">mcbbs中文论坛页面</a></li>
@@ -3417,10 +3417,10 @@
 	傀儡渔夫<br/>
 	傀儡战士<br/>
 	傀儡牧民</th>
-<td>傀儡+<a href="#break_hand">破坏之手</a><br/>
+<td>傀儡+<a href="#industrious_hand">勤劳之手</a><br/>
+	傀儡+<a href="#break_hand">破坏之手</a><br/>
 	傀儡+<a href="#smart_hand">灵巧之手</a><br/>
 	傀儡+<a href="#angry_hand">愤怒之手</a><br/>
-	傀儡+<a href="#industrious_hand">勤劳之手</a><br/>
 	傀儡+<a href="#toughen_hand">历练之手</a></td>
 <td><span class="ui cm" title="合成器">
 <span class="ci golem" title="傀儡"></span>
@@ -5538,7 +5538,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-08-01</p>
+<p>最后更新 2019-08-03</p>
 </footer>
 </article>
 </body></html>
