--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>更多的合成 Crafting++ v1.9.11</title>
+<title>更多的合成 Crafting++ v1.9.12</title>
 <meta name='author' content='ruhuasiyu@mcbbs' />
 <meta name='keywords' content='minecraft, 原版模组, vanilla mod, datapacks, Crafting++' />
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
@@ -49,7 +49,7 @@
 <p style="color:red">🎉欢迎来到原版模组《更多的合成》主页！</p>
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。</p>
-<p>最新正式版本为v1.9.11，于2019年8月1日发布，支持Minecraft 1.14版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计了花草、头颅和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
+<p>最新正式版本为v1.9.12，于2019年8月4日发布，支持Minecraft 1.14.x版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计了花草、头颅和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
 <p>本模组即将完结，以后应该只会修复bug和优化内容，不会再有大的更新。如遇到Minecraft命令机制大改或新生物等内容，我还是会及时更新代码并支持新的内容。感谢大家一直以来的支持和帮助！</p>
 
 <h3 id="download">📦 下载地址</h3>
@@ -63,85 +63,90 @@
 
 <table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th colspan="2">下载地址</th></tr></thead>
 <tbody>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9.11</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.11">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.11.zip">官方</a></td>
-</tr>">下载地址</th></tr></thead>
-<tbody>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9.10</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.10">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.10.zip">官方</a></td>
-</tr>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9.9</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.9">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.9.zip">官方</a></td>
-</tr>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9.8</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.8">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.8.zip">官方</a></td>
-</tr>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9.7</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.7">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.7.zip">官方</a></td>
-</tr>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9.6</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.6">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.6.zip">官方</a></td>
-</tr>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9.5</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.5">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.5.zip">官方</a></td>
-</tr>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9.4</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.4">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.4.zip">官方</a></td>
-</tr>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9.3</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.3">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.3.zip">官方</a></td>
-</tr>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9.2</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.2">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.2.zip">官方</a></td>
-</tr>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9.1</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.1">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.1.zip">官方</a></td>
-</tr>
-<tr>
-	<td>Java版 1.14.x</td>
-	<td>v1.9</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.zip">官方</a></td>
-</tr>
-<tr>
-	<td>Java版 1.13.1-1.13.2</td>
-	<td>v1.8.4</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.8.4">github</a></td>
-	<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.4.zip">官方</a></td>
-</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.12</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.12">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.12.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.11</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.11">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.11.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.10</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.10">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.10.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.9</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.9">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.9.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.8</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.8">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.8.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.7</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.7">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.7.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.6</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.6">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.6.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.5</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.5">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.5.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.4</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.4">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.4.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.3</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.3">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.3.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.2</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.2">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.2.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.1</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.1">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.1.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.13.1-1.13.2</td>
+		<td>v1.8.4</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.8.4">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.4.zip">官方</a></td>
+	</tr>
 </tbody></table>
 
 <h3 id="how_to_start">🚀 如何开始</h3>
@@ -3149,7 +3154,7 @@
 
 <h3 id="santa_gift">圣诞礼物 (Santa Gift)</h3>
 <span class="ui single"><span class="ci santa_gift"></span></span>
-<p>从流浪商人处可购买，打开后可随机获得鞘翅、附魔钻石盔甲/工具/剑、矿物、金苹果、马铠和种子包。</p>
+<p>从流浪商人处可购买，打开后可随机获得鞘翅、三叉戟、附魔钻石盔甲/工具/剑、矿物、金苹果、马铠和种子包。</p>
 
 <h3 id="stone_tools">石制工具 (Stone Tools)</h3>
 <span class="ui single"><span class="stone_axe"></span></span>
@@ -5538,7 +5543,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-08-03</p>
+<p>最后更新 2019-08-04</p>
 </footer>
 </article>
 </body></html>
