物品分类器

--- a/index.html
+++ b/index.html
@@ -3731,9 +3731,9 @@
 <span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 </span></td></tr>
 
-<tr><th><strong id="stargazy_pie">仰望星空派 (Stargazy Pie)</strong><br /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /></th><td>熟鳕鱼+熟猪排+棕色蘑菇+小麦</td>
+<tr><th><strong id="stargazy_pie">仰望星空派 (Stargazy Pie)</strong><br /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /><img src="items/hunger.png" style="width:18px;height:18px;" title="16" /></th><td>熟鲑鱼+熟猪排+棕色蘑菇+小麦</td>
 <td><span class="ui cm" title="合成器">
-<span class="cooked_salmon" title="熟鳕鱼"></span>
+<span class="cooked_salmon" title="熟鲑鱼"></span>
 <span class="cooked_porkchop" title="熟猪排"></span>
 <span class="brown_mushroom" title="棕色蘑菇"></span>
 <span class="wheat" title="小麦"></span>
