--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>更多的合成 Crafting++ v1.9.12</title>
+<title>更多的合成 Crafting++ v1.9.13</title>
 <meta name='author' content='ruhuasiyu@mcbbs' />
 <meta name='keywords' content='minecraft, 原版模组, vanilla mod, datapacks, Crafting++' />
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
@@ -49,7 +49,7 @@
 <p style="color:red">🎉欢迎来到原版模组《更多的合成》主页！</p>
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。</p>
-<p>最新正式版本为v1.9.12，于2019年8月4日发布，支持Minecraft 1.14.x版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计了花草、头颅和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
+<p>最新正式版本为v1.9.13，于2019年8月8日发布，支持Minecraft 1.14.x版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计了花草、头颅和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
 <p>本模组即将完结，以后应该只会修复bug和优化内容，不会再有大的更新。如遇到Minecraft命令机制大改或新生物等内容，我还是会及时更新代码并支持新的内容。感谢大家一直以来的支持和帮助！</p>
 
 <h3 id="download">📦 下载地址</h3>
@@ -63,6 +63,12 @@
 
 <table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th colspan="2">下载地址</th></tr></thead>
 <tbody>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.13</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.13">github</a></td>
+		<td><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.13.zip">官方</a></td>
+	</tr>
 	<tr>
 		<td>Java版 1.14.x</td>
 		<td>v1.9.12</td>
@@ -360,8 +366,8 @@
 · <a href="#chest_transporter"><span class="ci" style="background-position: -16px -720px;"></span>搬箱器</a> 
 · <a href="#firecrackers"><span class="ci" style="background-position: -80px -624px;"></span>鞭炮</a>
 · <a href="#flags"><span class="ci" style="background-position: -0px -576px;"></span><span class="ci" style="background-position: -16px -576px;"></span><span class="ci" style="background-position: -32px -576px;"></span><span class="ci" style="background-position: -48px -576px;"></span><span class="ci" style="background-position: -64px -576px;"></span>旗帜</a>
-· <a href="#logos"><span class="ci" style="background-position: -80px -576px;"></span><span class="ci" style="background-position: -96px -576px;"></span><span class="ci" style="background-position: -112px -576px;"></span><span class="ci" style="background-position: -128px -576px;"></span><span class="ci" style="background-position: -144px -592px;"></span>标志</a>
-· <a href="#shield_pattern"><span class="ci" style="background-position: -0px -160px;"></span><span class="ci" style="background-position: -16px -160px;"></span><span class="ci" style="background-position: -32px -160px;"></span><span class="ci" style="background-position: -48px -160px;"></span><span class="ci" style="background-position: -64px -160px;"></span><span class="ci" style="background-position: -80px -160px;"></span><span class="ci" style="background-position: -96px -160px;"></span><span class="ci" style="background-position: -112px -160px;"></span><span class="ci" style="background-position: -128px -160px;"></span><span class="ci" style="background-position: -144px -176px;"></span>盾牌图案</a>
+· <a href="#logos"><span class="ci" style="background-position: -80px -576px;"></span><span class="ci" style="background-position: -96px -576px;"></span><span class="ci" style="background-position: -112px -576px;"></span><span class="ci" style="background-position: -128px -576px;"></span><span class="ci" style="background-position: -144px -592px;"></span><span class="ci" style="background-position: -0px -736px;"></span>标志</a>
+· <a href="#shield_pattern"><span class="ci" style="background-position: -0px -160px;"></span><span class="ci" style="background-position: -16px -160px;"></span><span class="ci" style="background-position: -32px -160px;"></span><span class="ci" style="background-position: -48px -160px;"></span><span class="ci" style="background-position: -64px -160px;"></span><span class="ci" style="background-position: -80px -160px;"></span><span class="ci" style="background-position: -96px -160px;"></span><span class="ci" style="background-position: -112px -160px;"></span><span class="ci" style="background-position: -128px -160px;"></span><span class="ci" style="background-position: -144px -176px;"></span><span class="ci" style="background-position: -16px -736px;"></span>盾牌图案</a>
 · <a href="#santa_gift"><span class="ci" style="background-position: -32px -624px;"></span>圣诞礼物</a>
 · <a href="#stone_tools"><span style="background-position: -96px -608px;"></span><span style="background-position: -112px -608px;"></span><span style="background-position: -128px -608px;"></span><span style="background-position: -144px -608px;"></span><span style="background-position: -176px -640px;"></span>石制工具</a>
 · <a href="#chainmail_armors"><span style="background-position: -16px -0px;"></span><span style="background-position: -32px -0px;"></span><span style="background-position: -48px -0px;"></span><span style="background-position: -64px -0px;"></span>锁链盔甲</a>
@@ -3082,13 +3088,15 @@
 <tr id="logos"><th>哔哩哔哩标志<br/>
 	github标志<br/>
 	mcmod标志<br/>
-	TCP标志<br/>
-	CBL标志</th>
+	The Command Power 标志<br/>
+	Command Block Logic 标志<br/>
+	Nuclear Fusion 标志</th>
 <td>画+<a href="#blackthorn">黑荆棘</a>+<a href="#trifolium">白车轴</a>+<a href="#esparto">芦苇草</a><br/>
 	画+<a href="#blackthorn">黑荆棘</a>+<a href="#trifolium">白车轴</a>+<a href="#cattail">香蒲草</a><br/>
 	画+<a href="#blackthorn">黑荆棘</a>+<a href="#trifolium">白车轴</a>+<a href="#isorchid">异绒兰</a><br/>
 	画+<a href="#blackthorn">黑荆棘</a>+<a href="#trifolium">白车轴</a>+<a href="#bauhinia">紫荆花</a><br/>
-	画+<a href="#blackthorn">黑荆棘</a>+<a href="#trifolium">白车轴</a>+<a href="#hyacinth">风信子</a></td>
+	画+<a href="#blackthorn">黑荆棘</a>+<a href="#trifolium">白车轴</a>+<a href="#hyacinth">风信子</a><br/>
+	画+<a href="#blackthorn">黑荆棘</a>+<a href="#trifolium">白车轴</a>+<a href="#lycoris_radiata">彼岸花</a></td>
 <td><span class="ui cm" title="合成器">
 <span class="painting" title="画"></span>
 <span class="ci blackthorn" title="黑荆棘"></span>
@@ -3130,13 +3138,15 @@
 <tr><th>盾牌(哔哩哔哩标志)<br/>
 	盾牌(github标志)<br/>
 	盾牌(mcmod标志)<br/>
-	盾牌(TCP标志)<br/>
-	盾牌(CBL标志)</th>
+	盾牌(The Command Power 标志)<br/>
+	盾牌(Command Block Logic 标志)<br/>
+	盾牌(Nuclear Fusion 标志)</th>
 <td>盾牌+<a href="#bilibili_logo">哔哩哔哩标志</a><br/>
 	盾牌+<a href="#github_logo">github标志</a><br/>
 	盾牌+<a href="#mcmod_logo">mcmod标志</a><br/>
-	盾牌+<a href="#tcp_logo">TCP标志</a><br/>
-	盾牌+<a href="#cbl_logo">CBL标志</a></td>
+	盾牌+<a href="#tcp_logo">The Command Power 标志</a><br/>
+	盾牌+<a href="#cbl_logo">Command Block Logic 标志</a><br/>
+	盾牌+<a href="#nf_logo">Nuclear Fusion 标志</a></td>
 <td><span class="ui cm" title="合成器">
 <span class="shield" title="盾牌"></span>
 <span class="ci bilibili_logo" title="哔哩哔哩标志"></span>
@@ -5543,7 +5553,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-08-04</p>
+<p>最后更新 2019-08-08</p>
 </footer>
 </article>
 </body></html>
